# hl_mai_10_kafka

./: CMakeLists.txt  index.yaml  start.sh  start_writer.sh  techstack.md  techstack.yml  writer_main.cpp
config/: config.cpp
database/: author.cpp  database.cpp
docker/: docker-compose.yml
docker/my_service/: Dockerfile
docker/my_writer/: Dockerfile
web_server/: http_web_server.h
web_server/handlers/: author_handler.h
